Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.38.0
-
None
Description
If an application returns a batch before draining all available events from it, the internal state machine may not have completed the steps needed to determine the correct polling events of interest, leaving the associated task in a hung state.
This is particularly relevant for the Catch2 test harness using the proactor.
Attachments
Issue Links
- incorporates
-
PROTON-2696 raw_connection_test.cpp:846:12: error: private field 'accept_' is not used [-Werror,-Wunused-private-field]
- Closed