PROTON-2695: epoll raw connections - reschedule task to finish unprocessed events from an event batch.